Finished core functionalities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,31 +24,15 @@
     "strictBindCallApply": false,
     "esModuleInterop": true,
     "paths": {
-      "@health/*": ["health/*"],
       "@services/*": ["services/*"],
-      "@utils/*": ["lib/utils/*"],
-      "@config": ["lib/config/index"],
-      "@constants/*": ["lib/constants/*"],
-      "@core/*": ["core/*"],
-      "@db/*": ["lib/db/*"],
-      "@dto/*": ["lib/dto/*"],
-      "@enums/*": ["lib/enums/*"],
-      "@interfaces": ["lib/interfaces"],
-      "@imgix":  ["lib/imgix"],
-      "@schemas/*": ["schemas/*"],
-      "@resolvers/*": ["resolvers/*"],
-      "@loaders": ["lib/loaders"],
-      "@logger": ["lib/logger/index"],
-      "@helpers/*": ["lib/helpers/*"],
+      "@config": ["config"],
+      "@custom-types/*": ["types/*"],
+      "@repositories/*": ["repositories/*"],
       "@controllers/*": ["controllers/*"],
       "@routes/*": ["routes/*"],
       "@middlewares/*": ["middlewares/*"],
-      "@factories/*": ["factories/*"],
-      "@external-services/*": ["external-services/*"],
-      "@magentoLib/*": ["lib/magento/*"],
-      "@unleashLib/*": ["lib/unleash/*"],
-      "@ms-redis/*": ["lib/redis/*"],
-      "@ms-axios/*": ["lib/axios/*"],
+      "@db/*": ["lib/db/*"],
+      "@logger": ["lib/logger"]
     }
   }
 }
