--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dd-trace": "^3.3.1",
     "dotenv": "^16.0.3",
     "eventemitter2": "^6.4.9",
+    "eventemitter3": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^15.3.0",
     "graphql-request": "^6.1.0",
