Implemented call to itself to handle events

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@routes/*": ["routes/*"],
       "@middlewares/*": ["middlewares/*"],
       "@db/*": ["lib/db/*"],
-      "@logger": ["lib/logger"]
+      "@logger": ["lib/logger"],
+      "@events": ["lib/events"]
     }
   }
 }
