--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">= 16.16.0"
   },
   "scripts": {
+    "start:all": "docker-compose up -d && yarn install && yarn migrate:prod && yarn prisma:generate && yarn dev",
     "dev": "nodemon",
     "worker": "npx ts-node -r tsconfig-paths/register ./src/workers/index.ts",
     "preinstall": "npx only-allow yarn",
@@ -71,7 +72,8 @@
     "sqs-consumer": "^7.0.1",
     "type-graphql": "^1.1.1",
     "unleash-client": "^3.20.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/axios-curlirize": "^1.3.2",
