--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "sqs-consumer": "^7.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "type-graphql": "^1.1.1",
     "unleash-client": "^3.20.0",
     "uuid": "^9.0.0",
@@ -83,6 +85,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
