--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@aws-sdk/client-eventbridge": "^3.282.0",
     "@aws-sdk/client-sqs": "^3.276.0",
+    "@hapi/boom": "^10.0.1",
     "@prisma/client": "^4.4.0",
     "@types/compression": "^1.7.2",
     "@types/qrcode": "^1.5.1",
