--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "start:prod": "node ./dist/index.js",
     "start:prod:worker": "node ./dist/workers/index.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src}/**/*.ts\" --fix",
     "lint-report": "eslint --output-file ./eslint-report.json --format json src --ext .js,.jsx,.ts,.tsx",
-    "prettier": "prettier --config .prettierrc \"{src,apps,libs,test}/**/*.ts\" --write",
-    "prettier-fix": "node_modules/.bin/prettier -l \"{src,apps,libs,test}/**/*.ts\" --write",
+    "prettier": "prettier --config .prettierrc \"{src}/**/*.ts\" --write",
+    "prettier-fix": "node_modules/.bin/prettier -l \"{src}/**/*.ts\" --write",
     "format": "prettier --write \"src/**/*.ts\"",
     "prisma:generate": "prisma generate",
     "prisma:studio": "npx prisma studio",
