Fixs on Readme and compile

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,8 @@
 NODE_ENV=development
 
 # DATABASE
-DATABASE_URL="postgresql://<<DB_USER>>:<<DB_PASS>>@localhost:5455/pokemon_store_luxor?schema=public"
+DATABASE_URL="postgresql://alexander:admin1234@localhost:5455/pokemon_store_luxor?schema=public"
 DATABASE_PROVIDER="postgresql"
-
-# POKEMON-ADAPTER
-BASE_URL="http://localhost"
 
 # LOGS
 PINO_SERVICE_NAME="pokemon-adapter"
