--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "importHelpers": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
