--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nodemon": "^3.0.1",
     "pino-pretty": "^9.1.1",
     "prettier": "^2.7.1",
+    "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
