--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "require": ["tsconfig-paths/register"]
   },
   "compilerOptions": {
-    "typeRoots": ["./node_modules/@types", "./@types/*"],
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
     "module": "commonjs",
     "lib": ["ES2022", "esnext.asynciterable", "WebWorker"],
     "declaration": true,
